@@ -41,6 +41,6 @@ Stack trace:
 #0 {main}
   thrown in %s on line %d
 "
-string(33) "Could not open input file: wrong
-"
+Could not open input file: wrong
+NULL
 Done
