@@ -50,8 +50,8 @@ echo "Done\n";
 --EXPECTF--
 string(%d) "No syntax errors detected in %s011.test.php
 "
-string(40) "Could not open input file: some.unknown
-"
+Could not open input file: some.unknown
+NULL
 string(%d) "
 Parse error: %s expecting %s{%s in %s on line %d
 Errors parsing %s011.test.php
